# px_swarm

./: .gitignore  CMakeLists.txt  README.md
configs/: mission_aggressive.yaml  mission_simple.yaml
docs/: PX_SWARM_SYSTEM_SCHEMATICS.md
include/app/: cli.hpp  mission.hpp
include/control/: follower_controller.hpp  leader_controller.hpp  px4_interface.hpp
include/swarm/: pso.hpp  swarm_bus.hpp  swarm_state.hpp
include/utils/: keyboard.hpp  time.hpp
scripts/: launch_gazebo_px4_instance.sh  launch_px_swarm_instance.sh  plot_metrics.py  rebuild.sh
src/app/: cli.cpp  mission.cpp  px_swarm_node_main.cpp
src/control/: follower_controller.cpp  leader_controller.cpp  px4_interface.cpp
src/swarm/: pso.cpp  swarm_bus.cpp  swarm_state.cpp
src/utils/: keyboard.cpp  time.cpp
